settings fix geri alındı

--- a/templates/dashboard/t3personel.html
+++ b/templates/dashboard/t3personel.html
@@ -54,8 +54,7 @@
                         <th>İsim</th>
                         <th>Koordinatörlük</th>
                         <th>Birim</th>
-                        <th>Öğle Yemeği</th>
-                        <th>Akşam Yemeği</th>
+                        <th>Sipariş Sayısı</th>
 
 
                         <th>Tarih</th>
@@ -68,8 +67,7 @@
                         <td>{{ veri.kisi.get_full_name }}</td>
                         <td>{{ veri.koordinatorluk }}</td>
                         <td>{{ veri.birim }}</td>
-                        <td>{{ veri.ogle_yemegi }}</td>
-                        <td>{{ veri.aksam_yemegi }}</td>
+                        <td>{{ veri.siparis_sayisi }}</td>
 
 
                         <td>{{ veri.submitteddate }}</td>
